# DRL_HW3_DQN_Variants

./: .gitignore  ASSIGNMENT_REQUIREMENTS.md  EXPERIMENT_PROTOCOL.md  EXPERIMENT_STORYLINE.md  FIGURE_MANIFEST.md  FINAL_SUBMISSION_CHECKLIST.md  PROJECT_CHARTER.md  README.md  REPRODUCIBILITY.md  REQUIREMENTS_TRACEABILITY_MATRIX.md  RESULT_INTERPRETATION_NOTES.md  environment.yml  pyproject.toml  requirements.txt
configs/hw3_1_static/: basic_dqn_static.yaml  default.yaml
configs/hw3_2_player/: basic_dqn_player.yaml  double_dqn.yaml  double_dqn_player.yaml  dueling_dqn.yaml  dueling_dqn_player.yaml  naive_dqn.yaml
configs/hw3_3_random/: e1_baseline.yaml  e1_random_dqn_baseline.yaml  e2_stabilized.yaml  e2_stabilized_dqn.yaml  e3_per.yaml  e3_per_dqn_stabilized.yaml  e4_rainbow.yaml  e4_rainbow_dqn_bonus.yaml
notebooks/starter/: 第3章程式_ALL_IN_ONE.ipynb
openspec/: PROJECT_SPEC.md  openspec.yaml
openspec/changes/: CHG-001-repo-bootstrap.md  CHG-002-project-spec.md  CHG-003-experiment-harness.md  CHG-004-hw3-1-static-dqn.md  CHG-005-hw3-2-player-dqn.md  CHG-006-hw3-3-random-e1-e2-e3.md  CHG-007-e4-rainbow-bonus.md
openspec/designs/: DES-001-project-architecture.md
openspec/tasks/: TASK-001-phase1-bootstrap.md
report/: HW3_DQN_Variants_研究型實驗報告.md  understanding_report.md
results/csv/: SMOKE_TEST_DO_NOT_USE_log.csv  final_all_experiments_summary.csv  hw3_1_static_basic_dqn_log.csv  hw3_2_player_basic_dqn_log.csv  hw3_2_player_double_dqn_log.csv  (+9 more)
scripts/: run_hw3_1_static.py  run_hw3_2_player.py  run_hw3_3_rainbow_bonus.py  run_hw3_3_random.py  smoke_test.py
(+34 files in other folders)
